--- a/user-service/.env
+++ b/user-service/.env
@@ -1,3 +1,3 @@
 SECRET_KEY = HMACSHA1
 DSN="postgres://postgres:philippians@localhost:5432/postgres?sslmode=disable"
-REDIS= "localhost:6379"
+REDIS1= "localhost:6379"
