--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -37,7 +37,8 @@ services:
     environment:
       DSN: postgres://postgres_render_x5cr_user:nzCDkeBYVmu8v9XwNnoMZ5sY8Wuwqeh3@dpg-clnmme6qc21c73fd72b0-a.oregon-postgres.render.com/postgres_render_x5cr
       SECRET_KEY: HMACSHA1
-      REDIS: rediss://red-clnmo16qc21c73fd85e0:1hYjZVXVY7HoIwFxsMuJouEJ4CstpkBn@oregon-redis.render.com:6379
+      REDIS: redis:6379
+      #REDIS: rediss://red-clnmo16qc21c73fd85e0:1hYjZVXVY7HoIwFxsMuJouEJ4CstpkBn@oregon-redis.render.com:6379
       ##Development
       DSN1: postgres://postgres:philippians@localhost:5432/postgres?sslmode=disable
       REDIS1: localhost:6379
@@ -46,7 +47,7 @@ services:
       POSTGRES_DB: postgres
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432  
-      REDIS2: redis:6379
+      
 
   redis:
     image: 'redis:alpine'
